--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -66,9 +66,9 @@
     }
 
     #footer-image {
-        height: 50px;
-        width: 280px;
-        margin-left: 36%;
+        height: 40px;
+        width: 260px;
+        margin-left: 37%;
     }
 }
 
@@ -123,9 +123,9 @@
     }
 
     #footer-image {
-        height: 50px;
-        width: 280px;
-        margin-left: 42%;
+        height: 40px;
+        width: 260px;
+        margin-left: 43%;
     }
 }
 
@@ -188,12 +188,19 @@
 #footer {
     background-color: #761c19;
     opacity: 0.8;
-    height: 100px;
+    height: 120px;
     margin-top: 20px;
 }
 
 #footer-text {
     font-size: 30px;
+    font-family: "Candara";
+    color: white;
+    text-align: center;
+}
+
+#footer-copyright {
+    font-size: 15px;
     font-family: "Candara";
     color: white;
     text-align: center;
